--- a/main.html
+++ b/main.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MyBookList</title>
+  <!-- Bootstrap for styling -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body class="container my-5">
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- Heading -->
+  <h1 class="text-center mb-4">MyBookList</h1>
 
+  <!-- Form -->
+  <div class="form-group mb-4">
+    <form id="book-form" class="row g-3">
+      <div class="col-md-4">
+        <input type="text" id="title" class="form-control" placeholder="Title" required>
+      </div>
+      <div class="col-md-4">
+        <input type="text" id="author" class="form-control" placeholder="Author" required>
+      </div>
+      <div class="col-md-3">
+        <input type="text" id="isbn" class="form-control" placeholder="ISBN#" required>
+      </div>
+      <div class="col-md-1">
+        <button type="submit" id="submit" class="btn btn-primary w-100">Add</button>
+      </div>
+    </form>
+  </div>
+
+  <!-- Table -->
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>ISBN#</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody id="book-list">
+      <!-- Dynamic rows appear here -->
+    </tbody>
+  </table>
+
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
-
 </html>
